# merqora-releases

./: .gitignore  AI_TRAINING_DEPLOYMENT.md  ARREGLOS_PENDIENTES.md  CAMBIOS_FEEDBACK_FINAL.md  COMPILE_INSTRUCTIONS.md  DESARROLLO_HOT_RELOAD.md  Dockerfile  GIT_COMMIT_TRAINING.ps1  INSTRUCCIONES_FCM_V1_SETUP.md  INSTRUCCIONES_SISTEMA_FEEDBACK_IA.md  MERCADOPAGO_SETUP.md  README.md  RESUMEN_ARREGLOS_COMPLETOS.md  SUPABASE_ADDRESSES_TABLE.sql  SUPABASE_ADD_IS_VERIFIED.sql  SUPABASE_ADMIN_ACCESS_FIX.sql  SUPABASE_ADMIN_CHAT_POLICY.sql  SUPABASE_AI_FEEDBACK_ENHANCED.sql  SUPABASE_AI_FEEDBACK_UPDATE.sql  SUPABASE_AI_SUPPORT_FIX.sql  SUPABASE_AI_SUPPORT_TABLES.sql  SUPABASE_AI_TRAINING_PIPELINE.sql  SUPABASE_APP_VERSIONS.sql  SUPABASE_CALLS_SYSTEM.sql  SUPABASE_CART_TABLE.sql  SUPABASE_CHAT_LABELS_PINS.sql  SUPABASE_CHAT_PRESENCE.sql  SUPABASE_CHAT_SETTINGS.sql  SUPABASE_COMMENT_REPLIES.sql  SUPABASE_DROP_OLD_COMMENTS_TABLES.sql  SUPABASE_FCM_PUSH_FIX.sql  SUPABASE_FCM_PUSH_TRIGGER.sql  SUPABASE_FCM_TOKENS.sql  SUPABASE_FEEDBACK_RLS_FIX.sql  SUPABASE_FEEDBACK_TABLES.sql  SUPABASE_FIX_ADDRESSES_FK.sql  SUPABASE_FIX_ADDRESS_SOURCE_ENUM.sql  SUPABASE_FOLLOWERS_TABLE.sql  SUPABASE_HANDSHAKE_ADMIN_ACCESS.sql  SUPABASE_HANDSHAKE_TRANSACTIONS.sql  (+50 more)
admin-web/: index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js
admin-web/src/: App.jsx  AppFull.jsx  index.css  main.jsx  supabaseClient.js
ai-support/: Dockerfile  Dockerfile.railway  README.md  docker-compose.yml  railway.json  train_ai.ps1  train_ai_round2.ps1
ai-support/cpp/: CMakeLists.txt
ai-support/cpp/include/: scoring_engine.hpp
ai-support/cpp/src/: confidence_calculator.cpp  intent_matcher.cpp  python_bindings.cpp  scoring_engine.cpp  text_analyzer.cpp
ai-support/python/: .env  .env.example  README_TRAINING.md  check_data.py  config.py  knowledge_base.py  learning_engine.py  llm_service.py  local_ai_model.py  main.py  models.py  orchestrator.py  reasoning_engine.py  requirements.txt  scoring_service.py  test_supabase.py  (+3 more)
ai-support/rust/: Cargo.toml
ai-support/rust/src/: lib.rs  logger.rs  rate_limiter.rs  sanitizer.rs  session.rs  validation.rs
app/: build.gradle.kts  google-services.json  proguard-rules.pro
benchmark/: build.gradle.kts
(+247 files in other folders)
